# Despair

./: .codespell-ignore  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  INSTALLATION_WINDOWS.md  LICENSE  QUICK_START.md  README.md  config.py  diagnose_pyqt6.py  docker-compose.yml  fix_pyqt6_dll.py  gitignore  gitignore (1)  launch_edge_detection_rye.bat  main.py  main.pyi  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements (2).txt  requirements-dev.txt  requirements.txt  rye.toml  setup_conda_windows.bat  setup_rye_windows.bat  smoke.py  test_gui_simple.py  troubleshoot_windows.bat
.github/workflows/: ci.yml
docs/: api.md  index.md
gui/: __init__.py  main_window.py  main_window.pyi
models/: __init__.py  base_model.py  base_model.pyi  dexined_model.py  dexined_model.pyi  model_manager.py  model_manager.pyi  teed_model.py  teed_model.pyi
processing/: __init__.py  batch_processor.py  batch_processor.pyi  image_utils.py  image_utils.pyi
scripts/: download_checkpoints.py  download_weights.py
tests/: __init__.py  test_download_script.py  test_image_utils.py  test_models.py
